Added IPVanish Added command options for start and end Added stuff to the minecraft checker

--- a/config.yml
+++ b/config.yml
@@ -1,30 +1,34 @@
 checker_general:
-  threads: 200
+  threads: 100
   order: "one" # one or all
   # one starts x threads and uses the x threads for one checker at a time
   # all statts x threads which all start a subthread for every checker. (faster but rip your network and cpu)
   timeout: 60 #in minutes
   path: "{current}/results/[%d-%m-%Y %H-%M-%S]/"
-  print_hits: False
+  print_hits: True
   remove_duplicate_combos: True
   remove_duplicate_proxies: True
 
 
+
 proxies_checker:
+  skipCheck: False
   threads: 200
   timeout: 4
   judge_url: "https://azenv.net/"
   ip_regex: "REMOTE_ADDR = (.*)"
 
-announcer:
+events:
   discord_webhook_url: ""
   on_start:
+    command: ""
     discord:
-      enabled: True
+      enabled: False
       post_combos: False
   on_end:
+    command: ""
     discord:
-      enabled: True
+      enabled: False
       post_results: False
 
 checkers:
@@ -33,7 +37,7 @@ checkers:
     timeout: 4
     check_amount: 1 # rechecks if invalid or on error
     remove_banned_proxy: True
-    account_format: "{email}:{password}:{uuid}:{name}"
+    account_format: "{email}:{password}:{uuid}:{name}:{accessToken}:{clientToken}"
     outputname: "working_{checkername}_{unix}.txt"
 
   nordvpn:
@@ -51,3 +55,14 @@ checkers:
     remove_banned_proxy: True
     account_format: "{email}:{password}:{rank}"
     outputname: "working_{checkername}_{unix}.txt"
+
+  ipvanish:
+    enabled: True
+    timeout: 4
+    check_amount: 4 #rechecks on error or on captcha
+    remove_banned_proxy: True
+    account_format: "{email}:{password}:{expireunix}:%d-%m-%Y"
+    outputname: "working_{checkername}_{unix}.txt"
+
+
+
